methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:11: error: expected class or object definition
def ligne2(c:Color,p:Color){
^FlowerCase:27: error: expected class or object definition
def ligne(c:Color, p1:Color, p2:Color){
^FlowerCase:36: error: expected class or object definition
def retourligne(){
^FlowerCase:50: error: expected class or object definition
def flower(c:Color, p:Color){
^FlowerCase:67: error: expected class or object definition
def marquerSol(){
^FlowerCase:72: error: Unmatched closing brace '}' ignored here
}
^